# webapp_ismir_2025

./: .gitignore  Hello.py  README.md  pyproject.toml
mxl/: TelemannWV40.02.mxl  TelemannWV40.03.mxl  TelemannWV40.04.mxl  TelemannWV40.05.mxl  TelemannWV40.06.mxl  TelemannWV40.07.mxl  TelemannWV40.08.mxl  TelemannWV40.09.mxl  TelemannWV40.10.mxl  TelemannWV40.11.mxl  TelemannWV40.12.mxl  TelemannWV40.13.mxl  filenames.txt
output/alignments/kuijken/: alignment_1.csv  alignment_10.csv  alignment_11.csv  alignment_12.csv  alignment_2.csv  alignment_3.csv  alignment_4.csv  alignment_5.csv  alignment_6.csv  alignment_7.csv  alignment_8.csv  alignment_9.csv
output/alignments/lazarevitch/: alignment_1.csv  alignment_10.csv  alignment_11.csv  alignment_12.csv  alignment_2.csv  alignment_3.csv  alignment_4.csv  alignment_5.csv  alignment_6.csv  alignment_7.csv  alignment_8.csv  alignment_9.csv
output/alignments/pahud/: alignment_1.csv  alignment_10.csv  alignment_11.csv  alignment_12.csv  alignment_2.csv  alignment_3.csv  alignment_4.csv  alignment_5.csv  alignment_6.csv  alignment_7.csv  alignment_8.csv  alignment_9.csv
output/alignments/pitelina/: alignment_1.csv  alignment_10.csv  alignment_11.csv  alignment_12.csv  alignment_2.csv  alignment_3.csv  alignment_4.csv  alignment_5.csv  (+4 more)
output/temp/: output.musicxml
pages/: 1_🎼Measures by performer.py  2_🕺🏼Movements by performer.py  3_🎶Fugatos by performer.py  4_🪈Corpus by performer.py  5_🎙️Performers comparison.py
src/: data.py  durations_analyse_tools.py  music21_tools.py  stats.py  streamlit_displays.py
(+24 files in other folders)
