[tool.poetry]
name = "app"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Telemann ISMIR 2025"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
music21 = "^9.1.0"
matplotlib = "^3.9.0"
pytest = "^8.2.2"
streamlit = "1.42.0"
pandas = "^2.2.2"
numpy = "^2.2.2"
cmasher = "^1.9.2"
seaborn = "^0.13.2"
streamlit-pdf-viewer = "^0.0.21"
scipy = "^1.15.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"